# vbe-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
img/: figure1.pptx
src/: decode.rs  encode.rs  lib.rs  tests.rs
