[package]
name = "vbe"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["vbe", "variable", "byte", "encoding", "compression"]
categories = ["encoding", "compression"]
description = "A Rust implementation of the Variable Byte Encoding (VBE) compression algorithm."
repository = "https://github.com/bazzilic/vbe-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"

[dev-dependencies]
rand = "0.8"
